--- a/index.html
+++ b/index.html
@@ -182,9 +182,28 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <div class="add">
+                <div class="add-left">
+                    <div class="add-text">
+                    <p>Start Your FreeFood</p>
+                    <p>Diary Today</p>
+                </div>
+                    <div class="re-signup">
+                        SIGN UP
+                    </div>
+                </div>
+                <div class="add-right">
+                    <div class="add-img">
+                        <img src="https://assets.mynetdiary.com/images/bg-start-your-free--devices@1x.png?v07092020" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
-
+<!-- clip-path: polygon(50% 30%, 100% 0, 100% 100%, 0 100%, 0 0); -->
 
     <footer>
         <div class="footer-lower">
